<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/it_news"
            android:title="@string/news" />
        <item
            android:id="@+id/it_xiandu"
            android:title="@string/xiandu"/>
        <item
            android:id="@+id/it_answer"
            android:title="@string/answer"/>
        <item
            android:id="@+id/it_messsage"
            android:title="@string/mymessage" />
        <item
            android:id="@+id/it_activity"
            android:title="@string/activitycenter" />
        <item
            android:id="@+id/it_tools"
            android:title="@string/tools" />
        <item
            android:id="@+id/it_about"
            android:title="@string/about" />
    </group>
</menu>